# multimodal-mid-term

./: .gitignore  pyproject.toml  🏠_Home.py
api/: logic.py
data/: download.sh
notebooks/: experiment.ipynb
pages/: 💻_Application.py
