[tool.poetry]
name = "app"
version = "0.0.1"
description = ""
authors = ["Aditya Wardianto <83759122+ditw11mhs@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.9.7 || >3.9.7,<3.12"
streamlit = "^1.12.2"
numpy = "^1.23.3"
plotly = "^5.10.0"
pandas = "^1.4.4"
stqdm = "^0.0.4"
numba = "^0.56.3"
scipy = "^1.9.3"
tensorflow = "^2.12.0"
pydicom = "^2.3.1"
matplotlib = "^3.7.1"
tensorflow-io = "^0.32.0"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
jupyterlab = "^3.6.3"
ipywidgets = "^8.0.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
